# learn-cpp

./: .gitignore  CMakeLists.txt  Readme.md  flake.nix  justfile
src/: main.cpp
